# OrbitalModulator

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo_setup.json  index.html  package-lock.json  package.json  tauri.conf.json  test_cycles.sh  test_tree.sh  test_volume_fix.rs
examples/: README.md  ambient_noise_patch.json  arpeggio_sequence_patch.json  basic_synth_patch.json  bass_patch.json  bass_sequence_patch.json  echo_delay_patch.json  envelope_vca_patch.json  layered_synth_patch.json  modulated_delay_patch.json  noise_percussion_patch.json  piano_patch.json  simple_oscillator_plugin.rs  simple_oscillator_plugin.toml  strings_patch.json  test_patch_loading.rs  test_signal_flow.rs  tremolo_patch.json  tremolo_vca_patch.json  vibrato_patch.json
icons/: icon.icns
src/: App.tsx  errors.rs  lib.rs  main.rs  main.tsx  parameters.rs  processing.rs  styles.css  tauri_commands.rs  tauri_main.rs
src-tauri/: Cargo.toml  project.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/audio/: mod.rs  mod_old.rs
src/cli/: mod.rs
src/components/: ADSRNode.tsx  AttenuverterNode.tsx  DelayNode.tsx  EurorackADSRNode.tsx  EurorackLFONode.tsx  EurorackSpectrumAnalyzerNode.tsx  FilterNode.tsx  GenericNode.tsx  LFONode.tsx  MixerNode.tsx  MultipleNode.tsx  NoiseNode.tsx  OscillatorNode.tsx  OscilloscopeNode.tsx  OutputNode.tsx  ParameterPanel.tsx  RingModulatorNode.tsx  SampleHoldNode.tsx  SequencerNode.tsx  SpectrumAnalyzerNode.tsx  Toolbar.tsx  VCANode.tsx  VCFNode.tsx  VCONode.tsx
src/graph/: mod.rs
src/nodes/: adsr.rs  adsr_refactored.rs  attenuverter.rs  attenuverter_refactored.rs  clock_divider.rs  clock_divider_refactored.rs  compressor.rs  compressor_refactored.rs  delay.rs  delay_refactored.rs  envelope.rs  filter.rs  lfo.rs  lfo_refactored.rs  mixer.rs  mixer_refactored.rs  mod.rs  multiple.rs  multiple_refactored.rs  noise.rs  noise_refactored.rs  oscillator.rs  oscillator_refactored.rs  oscilloscope.rs  oscilloscope_refactored.rs  output.rs  output_refactored.rs  quantizer.rs  quantizer_refactored.rs  ring_modulator.rs  ring_modulator_refactored.rs  sample_hold.rs  sample_hold_refactored.rs  sequencer.rs  sequencer_refactored.rs  sine_oscillator.rs  sine_oscillator_refactored.rs  spectrum_analyzer.rs  spectrum_analyzer_refactored.rs  vca.rs  (+5 more)
src/plugin/: api.rs  c_abi.rs  loader.rs  manager.rs  manifest.rs  mod.rs  sandbox.rs  sdk.rs
src/styles/: eurorack.css  oscilloscope.css
src/tauri_commands/: plugin.rs
