[package]
name = "orbital-modulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "orbital_modulator"
crate-type = ["cdylib", "rlib"]

# ライブラリ専用 - バイナリターゲット削除

[[bin]]
name = "test_volume_fix"
path = "test_volume_fix.rs"

[dependencies]
# オーディオエンジン
cpal = "0.16"
fundsp = { version = "0.20", features = ["std"] }
dasp = "0.11"

# GUI only - no CLI dependencies needed

# Tauri
tauri = { version = "1.8", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open"] }
tauri-build = "1.5"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ユーティリティ
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# 非同期・並行処理
tokio = { version = "1.35", features = ["full"] }
dashmap = "5.5"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
