[package]
name = "orbital-modulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "orbital_modulator"
crate-type = ["cdylib", "rlib"]

# ライブラリ専用 - Tauriアプリはsrc-tauriにあります

[dependencies]
# オーディオエンジン
cpal = "0.16"
fundsp = { version = "0.20", features = ["std"] }
dasp = "0.11"

# GUI only - no CLI dependencies needed

# Tauri
tauri = { version = "2.0", features = [] }
tauri-build = "2.0"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ユーティリティ
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# プラグインシステム
libloading = "0.8"
sha2 = "0.10"
dirs = "5.0"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# 非同期・並行処理
tokio = { version = "1.35", features = ["full"] }
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "test_patch_loading"
path = "examples/test_patch_loading.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
