[package]
name = "orbital-modulator-app"
version = "0.1.0"
description = "orbital-modulator synthesizer"
authors = ["you"]
license = ""
repository = ""
default-run = "orbital-modulator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

# Link to our main library
orbital-modulator = { path = ".." }

[[bin]]
name = "orbital-modulator"
path = "src/main.rs"
